
depend on berryFunctions again?

- distLplot:
# support region lo and hi by supdist after next lmomco update
# DESCRIPTION Depends on lmomco > x.x.x (version that includes supdist)

- distLextreme: 
# Include Bootstrapping with user-specified proportion left out
# add R2/RMSE for cdf, PPweib and PPgring to output
# add weights to output



----------------------------------------------------------------------
----------------------------------------------------------------------
2. extremeStat - development over time
----------------------------------------------------------------------
----------------------------------------------------------------------

Version 0.3 (2014-09-30)
independent from berryFunctions now.
Thus I included lim0, logAxis, logVals, owa, rainbow2, rmse, rsquare
Thinking about how to progress. In my opinion, it would make more sense to depend on berryFunctions, but Ripley does not like to see a subpackage like this on CRAN.


----------------------------------------------------------------------
----------------------------------------------------------------------


Version 0.2 (2014-09-22)
First version submitted to CRAN, was not accepted.
Documentation slightly refined here and there
changed all "cat" to "message"
added datname element in dlf, used for main and xlab in all suitable plots

- distLplot:
# log=TRUE now works properly, as it just draws logAxis
# logargs argument added
# PDF lines now truncated to support region of distribution
# plots with xlim outside of support region now possible without error
# new default for color vector
# density plot now with lim0
# if(percentline), a vartical dashed line at gofProp is drawn

- distLgof:
# plot default is now TRUE

- distLfit
#distLgof is now explicitly called with plot=FALSE

- distLgofplot:
# received a bunch of graphic arguments
# 'order' and 'add' arguments added


----------------------------------------------------------------------