@@ -1,8 +1,8 @@
 Package: extremeStat
 Type: Package
 Title: Extreme Value Statistics on a Linear Scale
-Version: 0.3
-Date: 2014-09-30
+Version: 0.3.1
+Date: 2014-10-16
 Imports: lmomco
 Suggests: pbapply, extRemes, berryFunctions
 Author: Berry Boessenkool
